[project]
name = "ynab-mcp"
version = "0.1.0"
description = "aaa"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.6.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
]
[[project.authors]]
name = "Ethan Kang"
email = "kangethan02@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
ynab-mcp = "ynab_mcp:main"
